// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================================================
// CORE TABLES
// ============================================================================

enum UserRole {
  admin
  reviewer
  task_owner
}

model User {
  id          String    @id @default(uuid())
  email       String    @unique
  name        String
  role        UserRole  @default(task_owner)
  msOid       String?   @map("ms_oid") // Microsoft Object ID
  isActive    Boolean   @default(true) @map("is_active")
  lastLoginAt DateTime? @map("last_login_at")
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")

  // Relations
  ownedTasks           ComplianceTask[] @relation("TaskOwner")
  reviewedTasks        ComplianceTask[] @relation("TaskReviewer")
  auditLogs            AuditLog[]
  csvImportJobs        CsvImportJob[]

  @@index([email])
  @@index([role])
  @@map("users")
}

// ============================================================================
// MASTER DATA TABLES
// ============================================================================

model Entity {
  id          String   @id @default(uuid())
  name        String   @unique
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  // Relations
  complianceTasks ComplianceTask[]

  @@map("entities")
}

model Department {
  id          String   @id @default(uuid())
  name        String   @unique
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  // Relations
  complianceTasks   ComplianceTask[]
  complianceMasters ComplianceMaster[]

  @@map("departments")
}

model Law {
  id          String   @id @default(uuid())
  name        String   @unique
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  // Relations
  complianceTasks   ComplianceTask[]
  complianceMasters ComplianceMaster[]

  @@map("laws")
}

model ComplianceMaster {
  id           String         @id @default(uuid())
  complianceId String         @map("compliance_id")
  name         String         @unique
  title        String
  description  String?
  lawId        String         @map("law_id")
  departmentId String         @map("department_id")
  frequency    TaskFrequency?
  impact       TaskImpact?
  createdAt    DateTime       @default(now()) @map("created_at")
  updatedAt    DateTime       @updatedAt @map("updated_at")

  // Relations
  law             Law              @relation(fields: [lawId], references: [id], onDelete: Cascade)
  department      Department       @relation(fields: [departmentId], references: [id], onDelete: Cascade)
  complianceTasks ComplianceTask[]

  @@index([lawId])
  @@index([departmentId])
  @@map("compliances_master")
}

// ============================================================================
// COMPLIANCE TASKS
// ============================================================================

enum TaskStatus {
  PENDING
  COMPLETED
  SKIPPED
}

enum TaskFrequency {
  DAILY
  WEEKLY
  MONTHLY
  QUARTERLY
  HALF_YEARLY
  YEARLY
  ONE_TIME
}

enum TaskImpact {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

model ComplianceTask {
  id                   String         @id @default(uuid())
  complianceId         String         @map("compliance_id") // Business ID from CSV
  title                String
  description          String?
  
  // Foreign Keys
  lawId                String         @map("law_id")
  departmentId         String         @map("department_id")
  entityId             String         @map("entity_id")
  complianceMasterId   String?        @map("compliance_master_id")
  ownerId              String         @map("owner_id") // Single assignee
  reviewerId           String         @map("reviewer_id") // Single reviewer
  
  // Task Properties
  status               TaskStatus     @default(PENDING)
  frequency            TaskFrequency?
  impact               TaskImpact?
  dueDate              DateTime?      @map("due_date")
  
  createdAt            DateTime       @default(now()) @map("created_at")
  updatedAt            DateTime       @updatedAt @map("updated_at")

  // Relations
  law               Law                @relation(fields: [lawId], references: [id], onDelete: Restrict)
  department        Department         @relation(fields: [departmentId], references: [id], onDelete: Restrict)
  entity            Entity             @relation(fields: [entityId], references: [id], onDelete: Restrict)
  complianceMaster  ComplianceMaster?  @relation(fields: [complianceMasterId], references: [id], onDelete: SetNull)
  owner             User               @relation("TaskOwner", fields: [ownerId], references: [id], onDelete: Restrict)
  reviewer          User               @relation("TaskReviewer", fields: [reviewerId], references: [id], onDelete: Restrict)
  
  taskExecutions    TaskExecution[]
  evidenceFiles     EvidenceFile[]

  @@unique([complianceId, entityId])
  @@index([status])
  @@index([ownerId])
  @@index([reviewerId])
  @@index([entityId])
  @@index([dueDate])
  @@map("compliance_tasks")
}

model TaskExecution {
  id          String   @id @default(uuid())
  taskId      String   @map("task_id")
  userId      String   @map("user_id")
  action      String   // 'COMPLETE' or 'SKIP'
  comment     String?  // For completion
  remarks     String?  // For skip reason
  executedAt  DateTime @default(now()) @map("executed_at")

  // Relations
  task        ComplianceTask @relation(fields: [taskId], references: [id], onDelete: Cascade)

  @@index([taskId])
  @@map("task_executions")
}

// ============================================================================
// EVIDENCE FILES (SharePoint Integration)
// ============================================================================

model EvidenceFile {
  id          String   @id @default(uuid())
  taskId      String   @map("task_id")
  uploadedBy  String   @map("uploaded_by")
  
  // SharePoint metadata
  itemId      String   @map("item_id") // SharePoint item ID
  webUrl      String   @map("web_url") // Direct link to file
  name        String   // File name
  sizeBytes   Int      @map("size_bytes")
  mimeType    String   @map("mime_type")
  siteId      String   @map("site_id")
  driveId     String   @map("drive_id")
  path        String   // Full path in SharePoint
  
  uploadedAt  DateTime @default(now()) @map("uploaded_at")

  // Relations
  task        ComplianceTask @relation(fields: [taskId], references: [id], onDelete: Cascade)

  @@unique([taskId, itemId]) // Prevent duplicate uploads
  @@index([taskId])
  @@map("evidence_files")
}

// ============================================================================
// CSV IMPORT
// ============================================================================

enum ImportStatus {
  PREVIEW
  IN_PROGRESS
  COMPLETED
  FAILED
}

model CsvImportJob {
  id            String       @id @default(uuid())
  uploadedBy    String       @map("uploaded_by")
  fileName      String       @map("file_name")
  totalRows     Int          @map("total_rows")
  successRows   Int          @default(0) @map("success_rows")
  failedRows    Int          @default(0) @map("failed_rows")
  status        ImportStatus @default(PREVIEW)
  mode          String       // 'preview' or 'commit'
  createdAt     DateTime     @default(now()) @map("created_at")
  completedAt   DateTime?    @map("completed_at")

  // Relations
  uploader      User              @relation(fields: [uploadedBy], references: [id], onDelete: Restrict)
  rows          CsvImportJobRow[]

  @@index([uploadedBy])
  @@index([createdAt])
  @@map("csv_import_jobs")
}

model CsvImportJobRow {
  id          String   @id @default(uuid())
  jobId       String   @map("job_id")
  rowNumber   Int      @map("row_number")
  success     Boolean  @default(false)
  errorMsg    String?  @map("error_msg")
  rowData     Json     @map("row_data") // Store original CSV row data
  createdAt   DateTime @default(now()) @map("created_at")

  // Relations
  job         CsvImportJob @relation(fields: [jobId], references: [id], onDelete: Cascade)

  @@index([jobId])
  @@index([jobId, success])
  @@map("csv_import_job_rows")
}

// ============================================================================
// AUDIT LOGS
// ============================================================================

model AuditLog {
  id          String   @id @default(uuid())
  userId      String   @map("user_id")
  action      String   // Action type (e.g., 'ROLE_CHANGED', 'TASK_CREATED')
  entityType  String   @map("entity_type") // Entity affected (e.g., 'USER', 'TASK')
  entityId    String?  @map("entity_id") // ID of affected entity
  changes     Json?    // Before/after values
  requestId   String?  @map("request_id") // For request tracing
  timestamp   DateTime @default(now())

  // Relations
  user        User      @relation(fields: [userId], references: [id], onDelete: Restrict)

  @@index([timestamp])
  @@index([userId])
  @@index([entityType, entityId])
  @@map("audit_logs")
}

// ============================================================================
// REPORTS
// ============================================================================

model ReportRun {
  id            String   @id @default(uuid())
  reportType    String   @map("report_type") // 'WEEKLY_TEAMS'
  executedAt    DateTime @default(now()) @map("executed_at")
  success       Boolean  @default(true)
  errorMsg      String?  @map("error_msg")
  periodStart   DateTime @map("period_start")
  periodEnd     DateTime @map("period_end")

  @@index([reportType, periodStart])
  @@map("report_runs")
}

// ============================================================================
// CONFIGURATION
// ============================================================================

model Config {
  id          String   @id @default(uuid())
  keyName     String   @unique @map("key_name")
  value       String   // Encrypted for sensitive values
  active      Boolean  @default(true)
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  @@index([keyName])
  @@map("configs")
}
